# Multi_Agent_Press

./: .env.example  .gitignore  README.md  SYSTEM_DESIGN.md  main.py  pyproject.toml  the_future_of_ai_agents_in_2025.md
src/agents/: editor.py  presenter.py  reporter.py  writer.py
src/tools/: search.py
tests/: manual_test.py
