[project]
name = "newsroom_ai_agent"
version = "0.1.0"
description = "A production grade small ai agentic platfrom for newsroom."
authors = [{name = "Arif"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk",
    "google-genai",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "uv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/core", "src/environment", "src/utils"]
