[project]
name = "newsroom_ai_agent"
version = "0.1.0"
description = "A production grade small ai agentic platfrom for newsroom."
authors = [{name = "Arif"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk",
    "google-genai",
    "googlesearch-python>=1.3.0",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "tavily-python>=0.7.21",
    "uv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/core", "src/environment", "src/utils"]
